bobcat (2.07.04)

  * Virtual destructors cannot have default implementations. Added
    Fork::~Fork and TableSupport::~TableSupport

  * Repaired compilation problem in fnwrap/fnwrap appearing  with g++-4.5
    (using Debian 4.5-20100404-1)

  * fnwrap/fnwrap needs std::move calls where lvalue references are passed to
    rvalue references, as templates do not automatically perform the
    conversion from lvalue refs to rvalue refs. 

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Fri, 09 Apr 2010 08:58:49 +0200

bobcat (2.07.03)

  * Repaired additional bugs in String::unescape; unescape only allows \x, \X
    is no longer accepted (and was not according to the standard), \0 not
    followed by octal numbers is now recognized as a 0-byte.

  * Multi-parameter constructors of Arg::LongOption no longer use default
    arguments to allow the use of initializer lists, added the explicit
    constructor Arg::LongOption(char const *name)

  * Added missing #include<cstring> to localsocketbase/localsocketbase.ih

  * Pattern now defines the default end pattern (pattern/pattern0.cc) as 
    "\\b" for the benefit of MAC users who otherwise suffer from the `empty
    sub-expression' error. This affects ConfigFile and (by implication)
    programs like XD. It has no known effect on Debian systems.

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Fri, 19 Mar 2010 15:37:02 +0100

bobcat (2.07.02)

  * Repaired a bug in converting escaped hexadecimal characters in
    String::unescape, reported by Richard Berendsen.

  * The FnWrap example is now about FnWrap, not anymore about FnWrap2c

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Wed, 24 Feb 2010 08:33:51 +0100

bobcat (2.07.01)

  * Minimized class FnWrap's member access rights. FnWrap's inner organization
    improved. Instead of creating nested FnWrap1 and FnWrap2 objects
    inheritance is used. Also, all function template implementations were
    moved to below the class interface.
