@@ -70,12 +70,12 @@ manpagesection(CONSTRUCTORS)
     itb(Tablebuf(size_t nColumns, Table::FillDirection direction,
             Table::WidthType widthType = Table::COLUMNWIDTH))
         This constructor expects the table's number of columns.  The number of
-rows are implied by the combination of this parameter and the number of
-elements that will be inserted into the bf(Table) object.  The bf(direction)
-parameter specifies the way new elements will be added to the bf(Table)
-object: row-wise or column-wise. Finally, the tt(widthType) parameter is used
+rows result from the combination of this parameter and the number of
+elements that are inserted into the bf(TableBuf) object.  The bf(direction)
+parameter specifies the way new elements will be added to the bf(TableBuf)
+object: row-wise or column-wise. The tt(widthType) parameter is used
 to specify the way the width of the table's columns is determined: each column
-may either have its own width or all columns will have equal widths.
+may either have its own width or all columns have equal widths.
     itb(Table(TableSupport &tableSupport, Table::FillDirection direction,
             Table::WidthType widthType = Table::COLUMNWIDTH))
         This constructor operates identically to the previous constructor, but
@@ -83,7 +83,7 @@ expects an additional reference to a bf(TableSupport) object. A
 bf(TableSupport) object offers additional formatting features used by the
 table to define elements like horizontal lines between rows, additional
 separators between elements etc. Note that the bf(TableSupport) object is
-passed as a non-const reference as the bf(Table) object must be able to
+passed as a non-const reference as the bf(TableBuf) object must be able to
 manipulate its data.
     )
     The copy constructor is not available.
@@ -91,44 +91,18 @@ manipulate its data.
 manpagesection(OVERLOADED OPERATORS)
 
     itemization(
-    itb(std::ostream &operator<<(std::ostream &str, Table &table))
+    itb(std::ostream &operator<<(std::ostream &str, TableBuf &tablebuf))
         This operator inserts a bf(Table) into a tt(std::ostream) object. Note
-that this operator requires a non-const table as it may have to fill out a
-table with empty elements (i.e., empty strings) to obtain a fully rectangular
-table. 
-    itb(Table &operator<<(Table &obj, Align const &align))
-        This operator is used to change the default alignment of either a
-column or an element. It is a wrapper around the member tt(setAlign()) (see
-below for its description). By default, all elements are right-aligned.
-    itb(Table &operator<<(Table &obj, Type const &x))
-        This overloaded operator is defined as a template: bf(Type) is a
-template type parameter instantiated to a type for which
-bf(std::ostringstream) insertions are possible.  It inserts the value/object
-tt(x) into the bf(Table)'s bf(std::ostringstream) base class object as the
-next element of the table.
+that the tt(TableBuf) object inserted into tt(str) is a non-const object, as
+the table may have to be completed by adding empty elements for missing ones.
     )
     The overloaded assignment operator is not available.
 
 manpagesection(MEMBER FUNCTIONS)
     itemization(
-    itb(Table &append(std::string const &text
-                 char const *sep = " \t", bool addEmpty = false))
-        This member adds all fields in tt(text) separated by one of the
-characters in tt(sep) as additional elements to the bf(Table) object. Empty
-fields are ignored unless the parameter tt(addEmpty) is initialized to
-tt(true).
     itb(void clear())
         This member clears the table. All existing elements are removed, and
-the table will be empty.
-    itb(void fill(InputIterator begin, InputIterator end))
-        This member is defined as a template; tt(InputIterator) is a template
-type parameter representing any input iterator. It can also be, e.g., a
-pointer to an insertable type. The iterators must point to data elements which
-can be inserted into an tt(std::ostream). The range of values implied by the
-member's iterator pair are inserted into the table as new elements.
-    itb(void push_back(std::string const &element))
-        This member can be used to add another element to the table (it is
-also called from a tt(back_inserter) adaptor).
+the table is empty after this call.
     itb(size_t nRows())
         This member returns the currently available number of rows in the
 table. Its value is only defined after calling bf(CHAR(d)ef()).
@@ -138,10 +112,10 @@ element of the bf(Table) object. The standard alignments tt(std::left,
 std::right) and tt(std::internal) may be specified, but in addition the
 alignment tt(FBB::center) may be used if elements should be centered into
 their column. A construction like
-        verb(tab << Align(2, FBB::center))
+        verb(tab.setAlign(Align(2, FBB::center)))
     requests centering of all elements in table column having index value 2
 (i.e., the table's 3rd column), whereas a construction like
-        verb(tab << Align(2, 3, FBB::center))
+        verb(tab.setAlign(Align(2, 3, FBB::center)))
     requests centering of element [2][3]. It is the responsibility of the
 programmer to ensure that such elements exist. By default, all elements are
 right-aligned.
@@ -153,25 +127,71 @@ other situations it may be called explicitly to force the insertion of another
 row in a table using tt(ROWWISE) insertions. With tt(COLUMNWISE) insertions
 its working is complex, since new elements added to a tt(COLUMNWISE) filled
 table will reshuffle its elements over the table's columns. 
+    itb(setFieldSeparator(char fs))
+        The default field separator is the `backspace' (tt(\b))
+character. After inserting a field separator the next table element will be
+defined. Inserting two field separators inserts an table empty element and
+starts the definition of the next element. This field separator character can
+be redefined by this function. The tt(setfs) manipulator (see below) can be
+used to redefine the field separator character while inserting elements into
+the tt(ostream) initialized with the tt(TableBuf). Calling
+tt(setFieldSeparator) without argument disables the use of a field separator
+character, and only leaves the use of the tt(fs) manipulator to switch to the
+next field.
+    itb(setRowSeparator(char rs))
+        The default row separator is the newline character (tt(\n)).  After
+inserting a row separator the next element to enter into the table will be the
+leftmost element of the next row.  Inserting two row separators adds an empty
+row to the table. The tt(setrs) manipulator (see below) can be used to
+redefine the row separator character while inserting elements into the
+tt(ostream) initialized with the tt(TableBuf).  Calling tt(setRowSeparator)
+without argument disables the use of a row separator character, and only
+leaves the use of the tt(rs) manipulator to switch to the next field.
     )
 
 manpagesection(MANPULATORS)
     itemization(
     itb(Table &CHAR(d)ef(Table &table))
-        This manipulator can be inserted into a table to call the table's
-bf(CHAR(d)ef()) member.
+        This manipulator can be inserted into a a tt(TableBuf)'s wrapping
+tt(ostream) to call the table's bf(CHAR(d)ef()) member.
+    itb(FBB::fs)
+        This manipulator can be inserted into a tt(TableBuf)'s wrapping 
+tt(ostream) to switch to the next field of the table. It is an alternative to
+using the field separator character.
+    itb(FBB::rs)
+        This manipulator can be inserted into a tt(TableBuf)'s wrapping 
+tt(ostream) to switch to the next row of the table. It is an alternative to
+using the row separator character.
+    itb(FBB::setfs)
+        This manipulator can be inserted into a tt(TableBuf)'s wrapping
+tt(ostream) to disable the use of the field separator character. The tt(fs)
+manipulator remains active. This manipulator does itself not perform a field
+switch.
+    itb(FBB::setfs(char ch))
+        This manipulator can be inserted into a tt(TableBuf)'s wrapping
+tt(ostream) to redefine the field separator character to tt(ch). This
+manipulator does itself not perform a field switch.
+    itb(FBB::setrs)
+        This manipulator can be inserted into a tt(TableBuf)'s wrapping
+tt(ostream) to disable the use of the row separator character. The tt(fs)
+manipulator remains active. This manipulator does itself not perform a row
+switch.
+    itb(FBB::setrs(char ch))
+        This manipulator can be inserted into a tt(TableBuf)'s wrapping
+tt(ostream) to redefine the row separator character to tt(ch). This
+manipulator does itself not perform a row switch.
     )
 
 manpagesection(EXAMPLE)
 
-    verbinclude(../../table/driver/driver.cc)
+    verbinclude(../../tablebuf/driver/driver.cc)
 
 manpagefiles()
     em(bobcat/table) - defines the class interface;nl()
 
 manpageseealso()
     bf(bobcat)(7), bf(align)(3bobcat), bf(manipulator)(3bobcat),
-    bf(tablesupport)(3bobcat)
+    bf(tablesupport)(3bobcat), bf(table)(3bobcat)
     
 manpagebugs()
     Note that tt(CHAR(d)ef()) will reshuffle elements over the table's
@@ -179,3 +199,4 @@ columns when new elements are added to the table subsequent to calling
 tt(CHAR(d)ef())
 
 includefile(trailer.inc)
+
