@@ -1,0 +1,6 @@
+#include "tablebase.ih"
+
+TableBase::~TableBase()
+{
+    delete d_ptr;
+}
