@@ -1,0 +1,5 @@
+#include "tablebase.ih"
+
+TableBase::
+{
+}
