@@ -1,8 +1,6 @@
-#include "table"
+#include "tablebase"
 
 #include <iomanip>
-#include <bobcat/string>
 
 using namespace std;
 using namespace FBB;
-
