@@ -1,0 +1,5 @@
+#include "tablebuf.ih"
+
+TableBuf::
+{
+}
