@@ -1,0 +1,60 @@
+#ifndef INCLUDED_BOBCAT_TABLEBUF_
+#define INCLUDED_BOBCAT_TABLEBUF_
+
+#include <streambuf>
+#include <bobcat/tablebase>
+
+namespace FBB
+{
+
+class TableBuf: public TableBase, public std::streambuf
+{
+    friend std::ostream &operator<<(std::ostream &str, TableBuf &table); 
+    int d_fs;
+    int d_rs;
+
+    public:
+        TableBuf(size_t nColumns, FillDirection direction,          // 0
+                                WidthType widthType = COLUMNWIDTH); 
+
+        TableBuf(TableSupport &tableSupport,                        // 1
+                size_t nColumns, FillDirection direction,             
+                WidthType widthType = COLUMNWIDTH);
+
+        TableBuf &setAlign(Align const &align);    // set an alignment
+        TableBuf &def();                    // fillup an incomplete table
+                                            // automatically at insertions
+        void setFieldSeparator(char fs);
+        void setRowSeparator(char rs);
+
+    private:
+};
+
+inline TableBuf &TableBuf::setAlign(Align const &align)
+{
+    TableBase::setAlign(align);
+    return *this;
+}
+                        // Insert column or element alignments
+inline TableBuf &operator<<(TableBuf &tab, Align const &align)
+{
+    return tab.setAlign(align);
+}
+
+inline TableBuf &TableBuf::def()
+{
+    TableBase::def();
+    return *this;
+}
+
+inline TableBuf &def(TableBuf &table)
+{
+    return table.def();
+}
+
+} // FBB
+        
+#endif
+
+
+
