@@ -1,0 +1,5 @@
+#include "tablebuf"
+
+using namespace std;
+using namespace FBB;
+
