@@ -1,0 +1,7 @@
+#include "tablebuf.ih"
+
+TableBuf::TableBuf(size_t nColumns, FillDirection direction, 
+                                                        WidthType widthType)
+:
+    TableBase(nColumns, direction, widthType)
+{}
