@@ -1,11 +1,8 @@
-#include "table.ih"
+#include "tablebuf.ih"
 
-Table::Table(TableSupport &tableSupport, size_t nColumns, 
+TableBuf::TableBuf(TableSupport &tableSupport, size_t nColumns, 
             FillDirection direction, WidthType widthType)
 : 
     TableBase(tableSupport, nColumns, direction, widthType)
 {}
-
-
-
 
