@@ -1,3 +1,14 @@
+bobcat (2.08.00)
+
+  * Added new class TableBuf: streambuf class allowing table constructions
+    using std::ostream objects
+
+  * Added new class (only used internally by Bobcat): TableBase, containing 
+    the common to TableBuf and Table
+
+  * Moved members erroneously placed in in tablesupport.ih back to
+    tablesupport.h 
+
 bobcat (2.07.04)
 
   * Virtual destructors cannot have default implementations. Added
